# vscode-cmake

./: CMakeLists.txt  README.md
mylibrary/: CMakeLists.txt  mylibrary.cpp  mylibrary.h
src/: main.cpp
